<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/loginnbkg"
    android:gravity="center"
    tools:context=".RegistrarActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="50dp"
        app:cardCornerRadius="50dp"
        app:cardElevation="20dp"
        android:background="@drawable/custom_editext">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="24dp">

            <TextView
                android:id="@+id/registerText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/app_registrar2"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="@color/azul"
                android:layout_marginBottom="20dp" />

            <EditText
                android:id="@+id/usuario"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/custom_editext"
                android:drawableStart="@drawable/baseline_person_24"
                android:drawablePadding="8dp"
                android:hint="@string/app_usuario"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background"
                android:autofillHints="usuario"
                android:inputType="text" />

            <EditText
                android:id="@+id/contrasena"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/custom_editext"
                android:drawableStart="@drawable/baseline_lock_24"
                android:drawablePadding="8dp"
                android:hint="@string/app_contraseña"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background"
                android:autofillHints="password"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/confirmarContrasena"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/custom_editext"
                android:drawableStart="@drawable/baseline_lock_24"
                android:drawablePadding="8dp"
                android:hint="@string/app_confirmar_contraseña"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background"
                android:autofillHints="password"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/numeroCelular"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/custom_editext"
                android:drawableStart="@drawable/baseline_local_phone_24"
                android:drawablePadding="8dp"
                android:hint="@string/app_telefono"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background"
                android:autofillHints="phone"
                android:inputType="phone" />

            <Button
                android:id="@+id/crearCuentaButton"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/button_background"
                android:text="@string/app_crear"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:layout_gravity="center"
                android:textAllCaps="false"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:text="@string/app_inicio"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:id="@+id/volverInicio"
        android:textColor="@color/azul"
        android:layout_marginBottom="30dp"
        android:gravity="center"
        android:clickable="true"
        android:focusable="true"/>
</LinearLayout>
