<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/loginnbkg"
    android:gravity="center"
    tools:context=".MainActivity">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="50dp"
        app:cardCornerRadius="50dp"
        app:cardElevation="20dp"
        android:background="@drawable/custom_editext">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="24dp">

            <TextView
                android:id="@+id/loginText"
                android:layout_width="260dp"
                android:layout_height="58dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/agrobkg" />

            <EditText
                android:id="@+id/usuario"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/custom_editext"
                android:drawableStart="@drawable/baseline_person_24"
                android:drawablePadding="8dp"
                android:hint="@string/app_usuario"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background"
                android:autofillHints="usuario"
                android:inputType="text" />

            <EditText
                android:id="@+id/contrasena"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/custom_editext"
                android:drawableStart="@drawable/baseline_lock_24"
                android:drawablePadding="8dp"
                android:hint="@string/app_contraseña"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background"
                android:autofillHints="password"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/ingresarButton"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/azul"
                android:text="@string/app_ingresar"
                android:textSize="20sp"
                app:cornerRadius="20dp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:text="@string/app_registrar"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:id="@+id/registrar"
        android:textColor="@color/azul"
        android:layout_marginBottom="30dp"
        android:gravity="center"
        android:clickable="true"
        android:focusable="true"/>



</LinearLayout>